# mcp-audio-server

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  README.md  bootstrap.sh  create_test_fixtures.py  docker-compose.yml  init-repo.sh  initialize_git.sh  mkdocs.yml  prometheus.yml  pyproject.toml  pytest.ini  todo.md
.github/workflows/: ci-workflow.yml  ci.yml  release.yml  test.yml
benchmarks/: audio_processing_benchmark.py
docs/: architecture.md  index.md  openapi.yaml
docs/api/: errors.md  openapi.md
docs/dev/: contributing.md  environment.md  getting-started.md  testing.md
docs/stylesheets/: extra.css
mcp_audio_server/: __init__.py  audio_io.py  cache.py  concurrency.py  main.py  metrics.py  security.py
mcp_audio_server/analysis/: __init__.py  chord_detection.py  key_detection.py  models.py  registry.py  tempo_tracking.py
mcp_audio_server/utils/: __init__.py  schema_loader.py  validation.py
schemas/: audio_analysis_response.schema.json  chord_analysis.schema.json  index.json
schemas/v1/: audio_analysis_response.schema.json  chord_analysis.schema.json
scripts/: release.py
tests/: mock_implementations.py  run_fixture_tests.py  run_mcp_fixture_tests.py  test_analysis.py  test_audio_fixtures.py  test_end_to_end.py  test_mcp_audio_fixtures.py  test_negative_cases.py  test_schema_validation.py  test_validation.py
tests/analysis/: test_tempo.py
tests/fixtures/: generate_mcp_audio.py  generate_test_audio.py
tests/fixtures/audio/: 10000hz_sine.flac  1000hz_sine.flac  100hz_sine.flac  440hz_sine.flac  (+1 more)
